<resources>
    <string name="app_name">Swoosh</string>
    <string name="backgroundimage">backgroundImage</string>
    <string name="lets_get_started">LETS GET STARTED</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="logo">logo</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">FIND A TEAM IN YOUR CITY AND DOMINATE THE LEAGUE</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">MENS</string>
    <string name="womens">WOMENS</string>
    <string name="co_ed">CO-ED</string>
    <string name="next">NEXT</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
    <string name="i_am_a">I am a</string>
</resources>